# meh

./: .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: guidelines.md  next-story.md  plan.md
src/meh/: __init__.py
src/meh/assets/: generate_logo.py
